[package]
name = "friday"
version = "0.1.0"
authors = ["Jonas Valfridsson <jonas@valfridsson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-io = { path = "audio-io" }
vendor-io = { path = "vendor-io" }
philips-hue = { path = "vendor-io/philips-hue" }
inference = { path = "inference" }
tensorflow-models = { path = "inference/tensorflow-models" }
speaker-detection = { path = "speaker-detection" }
ctrlc = "3.1.7"
argparse = "0.2.2"
