[package]
name = "friday"
version = "0.1.0"
authors = ["Jonas Valfridsson <jonas@valfridsson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
friday-web = { path ="friday-web" }
friday-audio = { path = "friday-audio" }
friday-vad = { path = "friday-vad" }
friday-vendor = { path = "friday-vendor" }
philips-hue = { path = "friday-vendor/philips-hue" }
friday-inference = { path = "friday-inference" }
tensorflow-models = { path = "friday-inference/tensorflow-models" }
ctrlc = "3.1.7"
