[package]
name = "friday"
version = "0.1.0"
authors = ["Jonas Valfridsson <jonas@valfridsson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
friday-web = { path ="friday-web" }
friday-discovery = { path = "friday-discovery" }
friday-logging = { path = "friday-logging" }
friday-audio = { path = "friday-audio" }
friday-vad = { path = "friday-vad" }
friday-error = { path = "friday-error" }
friday-storage= { path = "friday-storage" }
friday-signal= { path = "friday-signal" }

friday-vendor = { path = "friday-vendor" }
vendor-scripts = { path = "friday-vendor/vendor-scripts" }

friday-inference = { path = "friday-inference" }
tensorflow-models = { path = "friday-inference/tensorflow-models" }
ctrlc = "3.1.7"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rand = "0.5"

# Used for testing web endpoint
[dev-dependencies]
ureq = { version = "1.5.4", features = ["json", "charset"] }
