[package]
name = "audio-io"
version = "0.1.0"
authors = ["Jonas Valfridsson <jonas@valfridsson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = {version = "*", features = ["asio"] }
circular-queue = "0.2.6"
wav = "0.4.1"
friday-error = { path="../friday-error" }
alsa = "0.4.3"
