[package]
name = "friday-discovery"
version = "0.1.0"
authors = ["Jonas Valfridsson <jonas@valfridsson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
friday-error = { path="../friday-error" } 
friday-storage = { path="../friday-storage" } 
ureq = { version = "1.5.4", features = ["json", "charset"] }
pnet = "0.27.2"
