[package]
name = "friday-logging"
version = "0.1.0"
authors = ["Jonas Valfridsson <jonas@valfridsson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For pretty logging of timestamps
humantime = "2.0.1"
# For pretty colors
ansi_term = "0.12.1"
