[package]
name = "friday-web"
version = "0.1.0"
authors = ["Jonas Valfridsson <jonas@valfridsson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.6"
url = "2.2.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
friday-error = { path="../friday-error" } 
