[package]
name = "vendor-philips-hue"
version = "0.1.0"
authors = ["Jonas Valfridsson <jonas@valfridsson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
friday-vendor = { path = ".." }
huelib = "0.10.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
friday-error = { path="../../friday-error" } 
friday-logging = { path="../../friday-logging" } 
friday-storage = { path="../../friday-storage" } 
friday-web = { path="../../friday-web" } 

# Rust-analyzer is broken with dev-deps.. for some reason, so having this
# uncommented while developing give autocompl
# ureq = { version = "1.5.4", features = ["json", "charset"] }

# Used to test the web-endpoints, these deps are only compiled when running tests
[dev-dependencies]
ureq = { version = "1.5.4", features = ["json", "charset"] }

