[package]
name = "vendor-scripts"
version = "0.1.0"
authors = ["Jonas Valfridsson <jonas@valfridsson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
friday-vendor = { path = ".." }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
friday-error = { path="../../friday-error" } 
friday-logging = { path="../../friday-logging" } 
friday-storage = { path="../../friday-storage" } 
#friday-web = { path="../../friday-web" } 
