[package]
name = "tensorflow-models"
version = "0.1.0"
authors = ["Jonas Valfridsson <jonas@valfridsson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
float-ord = "0.2.0"
tensorflow-rust-sys = { path="tensorflow-rust-sys" } 
inference = { path="../" } 
friday-error = { path="../../friday-error" } 
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
